--- a/yeee-chatgpt-client/pom.xml
+++ b/yeee-chatgpt-client/pom.xml
@@ -13,13 +13,13 @@
 
     <dependencies>
         <dependency>
+            <groupId>vip.yeee.memo</groupId>
+            <artifactId>common-netty-websocket</artifactId>
+        </dependency>
+        <dependency>
             <groupId>vip.yeee.app</groupId>
             <artifactId>yeee-chatgpt-common</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>vip.yeee.memo</groupId>
-            <artifactId>common-websocket</artifactId>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
