upd：gpt sensitive

--- a/yeee-chatgpt-client/pom.xml
+++ b/yeee-chatgpt-client/pom.xml
@@ -34,6 +34,10 @@
             <groupId>vip.yeee.memo</groupId>
             <artifactId>common-app-auth-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>vip.yeee.memo</groupId>
+            <artifactId>common-jcseg</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
