upd：gpt 用户信息优化

--- a/yeee-app-common/pom.xml
+++ b/yeee-app-common/pom.xml
@@ -16,6 +16,10 @@
             <groupId>vip.yeee.memo</groupId>
             <artifactId>common-wx-ma</artifactId>
         </dependency>
+        <dependency>
+            <groupId>vip.yeee.memo</groupId>
+            <artifactId>common-wx-mp</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
